[tool.poetry]
name = "simple-input"
version = "0.1.0"
description = "Simple input example"
authors = ["bhazuka <bhazuka@contractor.usgs.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage = {extras = ["toml"], version = "^7.4.0"}
isort = "^5.13.2"
black = "^23.12.1"
bandit = "^1.7.6"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
flake8 = "^7.0.0"


[tool.poetry.group.lambda-layer-powertools.dependencies]
aws-lambda-powertools = {extras = ["aws-sdk", "tracer", "validation"], version = "^2.32.0"}


[tool.poetry.group.lambda-layer-pydantic.dependencies]
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
